--- a/lista_ids.html
+++ b/lista_ids.html
@@ -2,140 +2,154 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Lista de IDs - Ordinis Archives</title>
+
+<!-- Fonte VT323 e Orbitron -->
+<link href="https://fonts.googleapis.com/css2?family=VT323&family=Orbitron:wght@700&display=swap" rel="stylesheet" />
+
 <style>
-  /* ======== Reset e base ======== */
+  /* Reset básico */
   * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
   }
+
   body {
-    background: radial-gradient(circle at center, #041e42, #00121a 90%);
-    color: #8affc1;
-    font-family: 'Courier New', monospace;
+    background-color: #272727;
+    color: #18b976;
+    font-family: 'VT323', monospace;
     font-size: 18px;
     line-height: 1.7;
     padding: 40px 60px;
     overflow-x: hidden;
   }
 
-  /* ======== Títulos ======== */
   h1 {
-    font-weight: 900;
+    font-weight: 700;
     font-size: 3.5em;
     letter-spacing: 4px;
-    color: #3af5f5;
-    text-shadow:
-      0 0 10px #3af5f5aa,
-      0 0 20px #33dede55;
-    margin-bottom: 30px;
-    user-select: none;
-    animation: subtleFlicker 5s infinite alternate, jitterSmall 8s infinite;
+    color: #18b976;
     text-align: center;
-  }
-  @keyframes subtleFlicker {
-    0% { opacity: 1; }
-    100% { opacity: 0.92; }
-  }
-  @keyframes jitterSmall {
-    0%, 100% { transform: translate(0, 0); }
-    25% { transform: translate(1px, 0); }
-    50% { transform: translate(0, 1px); }
-    75% { transform: translate(-1px, 0); }
+    margin-bottom: 40px;
+    user-select: none;
+    font-family: 'Orbitron', sans-serif;
+    text-shadow:
+      0 0 8px #18b976aa,
+      0 0 15px #18b97677;
   }
 
-  /* ======== Lista de IDs ======== */
   ul.id-list {
     list-style: none;
     max-width: 400px;
     margin: 0 auto;
   }
+
   ul.id-list li {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
   }
+
   a.id-link {
     display: flex;
     align-items: center;
     gap: 15px;
     text-decoration: none;
-    color: #8affc1;
+    color: #18b976;
     font-size: 1.3em;
-    padding: 10px 15px;
+    padding: 12px 18px;
     border-radius: 10px;
-    background: rgba(3, 30, 45, 0.8);
+    background: rgba(24, 185, 118, 0.15);
     box-shadow:
-      0 0 10px #0dfaff44,
-      inset 0 0 15px #0dfaff22;
+      0 0 10px #18b97644,
+      inset 0 0 15px #18b97622;
     user-select: none;
     transition: background-color 0.3s ease, box-shadow 0.3s ease, color 0.3s ease;
+    border: 2px solid #18b976aa;
   }
+
   a.id-link:hover {
-    background: rgba(0, 255, 214, 0.3);
+    background: rgba(24, 185, 118, 0.4);
     box-shadow:
-      0 0 20px #00ffd6cc,
-      inset 0 0 25px #00ffd6cc;
-    color: #00ffd6;
+      0 0 25px #18b976cc,
+      inset 0 0 25px #18b976cc;
+    color: #a0f7cd;
   }
+
   img.avatar {
     width: 48px;
     height: 48px;
     border-radius: 50%;
     object-fit: cover;
-    filter: drop-shadow(0 0 3px #00ffd6);
-    background-color: #003340;
+    filter: drop-shadow(0 0 3px #18b976);
+    background-color: #004d2e;
     transition: filter 0.3s ease, transform 0.3s ease;
   }
+
   a.id-link:hover img.avatar {
-    filter: drop-shadow(0 0 10px #00ffd6);
+    filter: drop-shadow(0 0 10px #18b976);
     transform: scale(1.1);
   }
 
-  /* ======== Modal (janela pop-up) ======== */
+  /* Modal (janela pop-up) */
   #modal {
     position: fixed;
     top: 0; left: 0; right: 0; bottom: 0;
-    background: rgba(0, 20, 35, 0.9);
+    background: rgba(0, 20, 10, 0.9);
     display: none;
     justify-content: center;
     align-items: center;
     z-index: 9999;
     backdrop-filter: blur(4px);
   }
+
   #modal.active {
     display: flex;
   }
+
   #modal-content {
-    background: #001822;
-    padding: 25px 40px;
+    background: #003820;
+    padding: 30px 40px;
     border-radius: 20px;
     box-shadow:
-      0 0 30px #00ffd6cc,
-      inset 0 0 20px #00ffd644;
+      0 0 30px #18b976cc,
+      inset 0 0 20px #18b97644;
     text-align: center;
     max-width: 320px;
     user-select: none;
     position: relative;
-    animation: modalFadeIn 0.5s ease forwards;
+    animation: modalFadeIn 0.4s ease forwards;
+    color: #a0f7cd;
+    font-family: 'VT323', monospace;
   }
+
   @keyframes modalFadeIn {
     from { opacity: 0; transform: scale(0.9); }
     to { opacity: 1; transform: scale(1); }
   }
+
   #modal img {
     width: 150px;
     height: 150px;
     border-radius: 50%;
     object-fit: cover;
-    filter: drop-shadow(0 0 15px #00ffd6);
-    background-color: #003340;
+    filter: drop-shadow(0 0 15px #18b976);
+    background-color: #004d2e;
     margin-bottom: 20px;
   }
+
   #modal h2 {
-    color: #00ffd6;
     margin-bottom: 15px;
-    font-family: 'Courier New', monospace;
+    font-family: 'Orbitron', sans-serif;
+    color: #18b976;
   }
+
+  #modal p {
+    font-size: 1.1rem;
+    line-height: 1.4;
+    color: #c4f0d8;
+  }
+
   #modal button.close-btn {
     position: absolute;
     top: 12px;
@@ -143,31 +157,15 @@
     background: transparent;
     border: none;
     font-size: 28px;
-    color: #00ffd6;
+    color: #18b976;
     cursor: pointer;
     font-weight: 900;
     user-select: none;
     transition: color 0.3s ease;
   }
-  #modal button.close-btn:hover {
-    color: #66fff6;
-  }
 
-  /* ======== Fundo linhas sutis para vibe digital ======== */
-  body::before {
-    content: "";
-    position: fixed;
-    top: 0; left: 0; right: 0; bottom: 0;
-    pointer-events: none;
-    background-image:
-      repeating-linear-gradient(
-        0deg,
-        #0dfaff22,
-        #0dfaff22 1px,
-        transparent 1px,
-        transparent 3px
-      );
-    z-index: 1;
+  #modal button.close-btn:hover {
+    color: #6df2b8;
   }
 </style>
 </head>
@@ -201,7 +199,7 @@
   const closeBtn = modal.querySelector('.close-btn');
 
   // Mensagem padrão para IDs normais
-  const defaultMessage = "Informações desse ID ainda não foram publicadas pelo Administrador";
+  const defaultMessage = "Informações desse ID ainda não foram publicadas pelo Administrador.";
 
   // Mensagem para ID 1 que dá erro
   const errorMessage = "Página Não Encontrada ou Inexistente!";
