--- a/id3.html
+++ b/id3.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="menu-container perfil-container">
-        <h1 class="title">Emmet</h1>
+        <h1 class="title">Kael</h1>
         <div class="info-section">
             <p><strong>Gênero:</strong> Masculino</p>
             <p><strong>Descrição:</strong></p>
-            <p class="descricao">Sou apenas um cara normal que quer curtir a vida nesse paraíso :]</p>
+            <p class="descricao">Não sei o porque de ter que assinar esse ID mas to aqui... Eu e quase mais ninguém.</p>
         </div>
 
         <a href="lista-ids.html" class="connect-btn">Voltar para Lista</a>
