--- a/id4.html
+++ b/id4.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="menu-container perfil-container">
-        <h1 class="title">Emmet</h1>
+        <h1 class="title">Charlotte</h1>
         <div class="info-section">
-            <p><strong>Gênero:</strong> Masculino</p>
+            <p><strong>Gênero:</strong> Feminino</p>
             <p><strong>Descrição:</strong></p>
-            <p class="descricao">Sou apenas um cara normal que quer curtir a vida nesse paraíso :]</p>
+            <p class="descricao">Pouca gente aqui mas me disseram que isso vai mudar rapidamente! OBS: Depois de tanto insistir em mudar meu texto deixaram e olha, mudou mesmo!</p>
         </div>
 
         <a href="lista-ids.html" class="connect-btn">Voltar para Lista</a>
