--- a/id5.html
+++ b/id5.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="menu-container perfil-container">
-        <h1 class="title">Emmet</h1>
+        <h1 class="title">Mark</h1>
         <div class="info-section">
             <p><strong>Gênero:</strong> Masculino</p>
             <p><strong>Descrição:</strong></p>
-            <p class="descricao">Sou apenas um cara normal que quer curtir a vida nesse paraíso :]</p>
+            <p class="descricao">Sério... Depois de tudo que já vi aqui, não sei se penso do mesmo jeito que antes, não sei quanto tempo fiquei aqui e só agora que decidiram colocar meu ID, se esqueceram de mim...</p>
         </div>
 
         <a href="lista-ids.html" class="connect-btn">Voltar para Lista</a>
