--- a/id6.html
+++ b/id6.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="menu-container perfil-container">
-        <h1 class="title">Emmet</h1>
+        <h1 class="title">Ingrid</h1>
         <div class="info-section">
-            <p><strong>Gênero:</strong> Masculino</p>
+            <p><strong>Gênero:</strong> Feminino</p>
             <p><strong>Descrição:</strong></p>
-            <p class="descricao">Sou apenas um cara normal que quer curtir a vida nesse paraíso :]</p>
+            <p class="descricao">Olha... não sei oque dizer, mas aqui é simplesmente PERFEITO, pelomenos no lugar aonde moro é perfeito! Parece que Deus reservou para mim esse canto :]</p>
         </div>
 
         <a href="lista-ids.html" class="connect-btn">Voltar para Lista</a>
