--- a/id1.html
+++ b/id1.html
@@ -17,5 +17,49 @@
     </div>
 
     <div class="overlay"></div>
+
+
+    <audio id="secreto-audio" loop>
+  <source src="audio/secreto_bg.mp3" type="audio/mpeg">
+  Seu navegador não suporta áudio.
+</audio>
+
+<script>
+  const secretoAudio = document.getElementById('secreto-audio');
+  let secretoAtivo = false;
+
+  // Detecta se a tecla Shift está sendo segurada
+  document.addEventListener('keydown', (e) => {
+      if(e.key === 'Shift' && !secretoAtivo){
+          secretoAtivo = true;
+          document.body.classList.add('modo-secreto');
+          secretoAudio.volume = 0.2; // volume baixinho
+          secretoAudio.play();
+      }
+  });
+
+  document.addEventListener('keyup', (e) => {
+      if(e.key === 'Shift'){
+          secretoAtivo = false;
+          document.body.classList.remove('modo-secreto');
+          secretoAudio.pause();
+      }
+  });
+</script>
+
+
+<div class="secreto" style="position: absolute; top: 300px; left: 1100px;">
+  🔮 ID2 FALSO DEUS
+</div>
+
+
+<!-- Imagem secreta -->
+<img class="secreto" src="images/still_here.png" 
+     alt="Segredo" width="200"
+     style="position: absolute; top: 100px; left: 100px;">
+
+
+
+    
 </body>
 </html>
