--- a/painel.html
+++ b/painel.html
@@ -14,8 +14,7 @@
 
        <div class="menu-options">
     <a href="lista-ids.html" class="connect-btn">📜 Lista de IDs</a>
-    <a href="#" class="connect-btn">📊 Monitoramento</a>
-    <a href="#" class="connect-btn">⚙ Configurações</a>
+   <a href="graficos.html" class="connect-btn">📊 Monitoramento de Riquezas</a>
     <a href="guia.html" class="connect-btn">📘 Guia do Jogador</a> <!-- novo -->
 </div>
 
@@ -45,6 +44,17 @@
     </div>
 
     <div class="overlay"></div>
+
+
+    <section class="video-section">
+  <h2>📽️ História</h2>
+  <video controls autoplay muted loop>
+    <source src="videos/intro.mp4" type="video/mp4">
+    Seu navegador não suporta vídeo HTML5.
+  </video>
+</section>
+
+
 
 
     
