--- a/erro203.html
+++ b/erro203.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8">
-  <title>Erro 203</title>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Erro 203 — Ordinis</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body style="text-align:center; font-family:sans-serif;">
-  <h1>Erro 203 — Página corrompida</h1>
-  <p>Escaneie o código abaixo para restaurar o acesso.</p>
-  <div id="qrcode"></div>
+<body>
+
+  <header style="text-align:center; margin-top:50px;">
+    <h1 class="title">Erro 203</h1>
+    <p>Acesso da página negado pelo Administrador</p>
+  </header>
+
+  <main style="text-align:center; margin-top:40px;">
+    <p>Segure Shift para ativar o modo secreto.</p>
+
+    <div class="secreto" style="margin-top:30px;">
+      <p>🌀 Conteúdo secreto: QR Code ou informações escondidas podem aparecer aqui!</p>
+      <img src="images/qr_novosite.png" alt="QR Code Secreto" width="250">
+    </div>
+  </main>
 
   <script>
-    // Configuração Firebase
-    const firebaseConfig = {
-      apiKey: "AIzaSyDqEPw2B_TUtngEcvfPoJMkXbJ2AydJFy4",
-      authDomain: "ordinis-secret.firebaseapp.com",
-      databaseURL: "https://ordinis-secret-default-rtdb.firebaseio.com",
-      projectId: "ordinis-secret",
-      storageBucket: "ordinis-secret.firebasestorage.app",
-      messagingSenderId: "251949306183",
-      appId: "1:251949306183:web:c9c89244484849f7983c62",
-      measurementId: "G-1NYXRRQG7J"
-    };
+    const secretoAudio = new Audio('audio/secreto_bg.mp3');
+    let secretoAtivo = false;
 
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
+    document.addEventListener('keydown', (e) => {
+        if(e.key === 'Shift' && !secretoAtivo){
+            secretoAtivo = true;
+            document.body.classList.add('modo-secreto');
+            secretoAudio.volume = 0.2;
+            secretoAudio.play();
+        }
+    });
 
-    // ID único para esta sessão
-    const sessionId = Math.random().toString(36).substring(2, 10);
-
-    // Cria QR code com link para o celular
-    const linkCelular = `https://SEU-SITE.github.io/desbloqueio.html?id=${sessionId}`;
-    new QRCode(document.getElementById("qrcode"), linkCelular);
-
-    // Observa no banco se foi desbloqueado
-    db.ref("sessions/" + sessionId).on("value", snap => {
-      if (snap.val() && snap.val().unlocked) {
-        window.location.href = "pagina-secreta.html";
-      }
+    document.addEventListener('keyup', (e) => {
+        if(e.key === 'Shift'){
+            secretoAtivo = false;
+            document.body.classList.remove('modo-secreto');
+            secretoAudio.pause();
+        }
     });
   </script>
+
 </body>
 </html>
