--- a/guia.html
+++ b/guia.html
@@ -112,6 +112,11 @@
         <p>Realize tarefas de restauração de conexão, colete fragmentos de dado e contenha anomalias para atrasar o colapso.</p>
       </details>
 
+      <details open>
+        <summary>Mecanicas</summary>
+        <p>Segurando Shift voce descobre algo... Talvez em algumas.</p>
+      </details>
+
 
       <details>
         <summary>Cooperação</summary>
